css reset and links css file to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <title>Frontend Mentor | Recipe page</title>
+    <link rel="stylesheet" href="styles/recipe-pg.css">
   </head>
   <body>
     <article>
