--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     />
 
     <title>Frontend Mentor | Recipe page</title>
-    <link rel="stylesheet" href="styles/recipe-pg.css">
+    <link rel="stylesheet" href="styles/recipe-pg.css" />
   </head>
   <body>
     <article>
       <header>
         <img src="assets/images/image-omelette.jpeg" alt="omelette" />
+
         <h1>Simple Omelette Recipe</h1>
         <p>
           An easy and quick dish, perfect for any meal. This classic omelette
@@ -26,12 +27,12 @@
           choice of cheese, vegetables, or meats.
         </p>
       </header>
-      <section>
+      <section class="prep-time">
         <h2>Preparation time</h2>
         <ul>
-          <li>Total: Approximately 10 minutes</li>
-          <li>Preparation: 5 minutes</li>
-          <li>Cooking: 5 minutes</li>
+          <li><b>Total:</b> Approximately 10 minutes</li>
+          <li><b>Preparation:</b> 5 minutes</li>
+          <li><b>Cooking:</b> 5 minutes</li>
         </ul>
       </section>
       <section>
@@ -75,7 +76,7 @@
           <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
         </ol>
       </section>
-      <section>
+      <section class="nutrition-section">
         <h2>Nutrition</h2>
         <p>
           The table below shows nutritional values per serving without the
