--- a/index.html
+++ b/index.html
@@ -16,98 +16,109 @@
     <link rel="stylesheet" href="styles/recipe-pg.css" />
   </head>
   <body>
-    <article>
-      <header>
-        <img src="assets/images/image-omelette.jpeg" alt="omelette" />
+    <div class="container">
+     
+        <article>
+          <header>
+            <img src="assets/images/image-omelette.jpeg" alt="omelette" />
 
-        <h1>Simple Omelette Recipe</h1>
-        <p>
-          An easy and quick dish, perfect for any meal. This classic omelette
-          combines beaten eggs cooked to perfection, optionally filled with your
-          choice of cheese, vegetables, or meats.
-        </p>
-      </header>
-      <section class="prep-time">
-        <h2>Preparation time</h2>
-        <ul>
-          <li><b>Total:</b> Approximately 10 minutes</li>
-          <li><b>Preparation:</b> 5 minutes</li>
-          <li><b>Cooking:</b> 5 minutes</li>
-        </ul>
-      </section>
-      <section>
-        <h2>Ingredients</h2>
-        <ul>
-          <li>2-3 large eggs</li>
-          <li>Salt, to taste</li>
-          <li>Pepper, to taste</li>
-          <li>1 tablespoon of butter or oil</li>
-          <li>
-            Optional fillings: cheese, diced vegetables, cooked meats, herbs
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Instructions</h2>
-        <ol>
-          <li>
-            Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
-            pepper until they are well mixed. You can add a tablespoon of water
-            or milk for a fluffier texture.
-          </li>
-          <li>
-            Heat the pan: Place a non-stick frying pan over medium heat and add
-            butter or oil.
-          </li>
-          <li>
-            Cook the omelette: Once the butter is melted and bubbling, pour in
-            the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
-          </li>
-          <li>
-            Add fillings (optional): When the eggs begin to set at the edges but
-            are still slightly runny in the middle, sprinkle your chosen
-            fillings over one half of the omelette.
-          </li>
-          <li>
-            Fold and serve: As the omelette continues to cook, carefully lift
-            one edge and fold it over the fillings. Let it cook for another
-            minute, then slide it onto a plate.
-          </li>
-          <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
-        </ol>
-      </section>
-      <section class="nutrition-section">
-        <h2>Nutrition</h2>
-        <p>
-          The table below shows nutritional values per serving without the
-          additional fillings.
-        </p>
-        <table>
-          <tr>
-            <th>Calories</th>
-            <td>277kcal</td>
-          </tr>
-          <tr>
-            <th>Carbs</th>
-            <td>0g</td>
-          </tr>
-          <tr>
-            <th>Protein</th>
-            <td>20g</td>
-          </tr>
-          <tr>
-            <th>Carbs</th>
-            <td>22g</td>
-          </tr>
-        </table>
-      </section>
-    </article>
+            <h1>Simple Omelette Recipe</h1>
+            <p>
+              An easy and quick dish, perfect for any meal. This classic
+              omelette combines beaten eggs cooked to perfection, optionally
+              filled with your choice of cheese, vegetables, or meats.
+            </p>
+          </header>
+          <section class="prep-time">
+            <h2>Preparation time</h2>
+            <ul>
+              <li><b>Total:</b> Approximately 10 minutes</li>
+              <li><b>Preparation:</b> 5 minutes</li>
+              <li><b>Cooking:</b> 5 minutes</li>
+            </ul>
+          </section>
+          <hr />
+          <section>
+            <h2>Ingredients</h2>
+            <ul>
+              <li>2-3 large eggs</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </li>
+            </ul>
+          </section>
+          <hr />
+          <section>
+            <h2>Instructions</h2>
+            <ol>
+              <li>
+                Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
+                pepper until they are well mixed. You can add a tablespoon of
+                water or milk for a fluffier texture.
+              </li>
+              <li>
+                Heat the pan: Place a non-stick frying pan over medium heat and
+                add butter or oil.
+              </li>
+              <li>
+                Cook the omelette: Once the butter is melted and bubbling, pour
+                in the eggs. Tilt the pan to ensure the eggs evenly coat the
+                surface.
+              </li>
+              <li>
+                Add fillings (optional): When the eggs begin to set at the edges
+                but are still slightly runny in the middle, sprinkle your chosen
+                fillings over one half of the omelette.
+              </li>
+              <li>
+                Fold and serve: As the omelette continues to cook, carefully
+                lift one edge and fold it over the fillings. Let it cook for
+                another minute, then slide it onto a plate.
+              </li>
+              <li>
+                Enjoy: Serve hot, with additional salt and pepper if needed.
+              </li>
+            </ol>
+          </section>
+          <hr />
+          <section class="nutrition-section">
+            <h2>Nutrition</h2>
+            <p>
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
+            <table>
+              <tr>
+                <th>Calories</th>
+                <td>277kcal</td>
+              </tr>
+              <tr>
+                <th>Carbs</th>
+                <td>0g</td>
+              </tr>
+              <tr>
+                <th>Protein</th>
+                <td>20g</td>
+              </tr>
+              <tr>
+                <th>Carbs</th>
+                <td>22g</td>
+              </tr>
+            </table>
+          </section>
+        </article>
+      
+    </div>
     <footer>
       <p>
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="mailto:stellahmargy0211@gmail.com">Stella Margy</a>.
       </p>
     </footer>
   </body>
